--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "returns the submitted file size",
   "main": "server.js",
   "scripts": {
-    "test": "node server.js"
+    "test": "node server.js",
+    "start": "node server.js"
   },
   "keywords": [
     "file",
@@ -17,5 +18,14 @@
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "multer": "^1.1.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mojoboss/Filemetadata-microservice.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mojoboss/Filemetadata-microservice/issues"
+  },
+  "homepage": "https://github.com/mojoboss/Filemetadata-microservice#readme"
 }
